Fix MapInfos block covering underlying links issue
Fixes #570

--- a/public/style/map/map.less
+++ b/public/style/map/map.less
@@ -100,6 +100,7 @@
         left: 5px;
         right: 5px;
         bottom: 31px;
+        width: max-content;
     }
 
     .mapInfo {
